--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
 html{
     font-size: 62.5%;
 }
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* common styles */
 
 /* section 1 */
@@ -25,10 +30,7 @@ html{
     ),
     url(images/bg.jpg) center no-repeat;
     background-size: cover;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 .section-1-heading{
     font-size: 6rem;
@@ -71,3 +73,38 @@ html{
     letter-spacing: 0.3rem;
 }
 /* end of section 1 */
+
+/* navbar */
+.navbar{
+    width: 100%;
+    height: 4rem;
+    background-color: #e41c6f;
+    box-shadow: 0.2rem 0.2rem 0.5rem #555;
+}
+.navbar-link{
+    font-size: 1.7rem;
+    font-weight: 600;
+    color: #333;
+    margin: 0 3rem;
+    letter-spacing: 0.5rem;
+    text-transform: uppercase;
+    position: relative;
+    transition: color 0.2s;
+}
+.navbar-link:hover{
+    color: #fff;
+}
+.navbar-link::before{
+    content: "";
+    width: 0;
+    height: 0.2rem;
+    background-color: #fff;
+    position: absolute;
+    right: -15%;
+    bottom: -0.3rem;
+    transition: width 0.2s;
+}
+.navbar-link:hover::before{
+    width: 130%;
+}
+/* end of navbar */
